# tuyindeme

./: index.html  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  vite.config.ts
renderer/: Cargo.toml
renderer/pkg/: package.json  renderer.d.ts  renderer.js  renderer_bg.wasm.d.ts
renderer/src/: lib.rs
src/: App.tsx  compiler.worker.ts  index.css  templates.ts  types.ts
src/components/: ItemForm.tsx  ResumeForm.tsx
