[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
typst = { git = "https://github.com/typst/typst.git", tag = "v0.8.0" }
typst-library = { git = "https://github.com/typst/typst.git", tag = "v0.8.0" }
comemo = "0.3"
wasm-bindgen = "0.2.87"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = "z"
wasm-opt = ['-Oz']
lto = true
strip = true

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false